##################################################
 Revision history for Log::Log4perl
##################################################

1.29 (not yet released)
   *    (ms) Added documentation on how to use Log4perl's :easy macros
             with Catalyst in Log::Log4perl::Catalyst.

1.28 (2010/02/24)
   *    (ms) Fixed caller stack with Buffer composite appender
   *    (ms) Fixed 'local caller_depth' error in various places. First
             localizing a variable and then increasing it is incorrect,
             as this ignores previous settings. The correct way of
             increasing the caller level is: 'local depth = depth + 1'.
   *    (ms) Added Log::Log4perl::Catalyst for use in Catalyst applications.

1.27 (2010/02/07)
   *    (ms) ***WARNING: This might break backward compatibility 
                         with some wrapper classes. 
             [RT 52913] Fixed category fetching in
             wrapper classes (reported by Martin Evans). Wrapper classes
             now need to call Log::Log4perl->wrapper_register to adapt
             get_logger() category fetching. Detailed docs under 
             "Using Log::Log4perl with wrapper functions and classes"
   *    (ms) Made meta tag compatible with MakeMaker versions < 6.50
        (ms) [RT 52083] Fixed manifest glitch from 1.26 (reported by
             Lars Thegler).
   *    (ms) Added note to FAQ on 'no init happened' warnings for API 
             initializations, as suggested by Malcolm Nooning.
   *    (ms) Applied patch by Christopher Mckay which sets
             Log4perl::Logger::INITIALIZED only if it's fully initialized.
   *    (ms) Emmanuel Rodriguez suggested changing TestBuffer's reset() 
             method to leave the logger population alone. Added clear()
             to accomodate the need for a single buffer reset.
   *    (ms) Xavier Caron added %p{1} to allow abbreviated priority
             strings in the pattern layout.